# gaeguli

./: .gitignore  README.md  azure-pipelines.yml  meson.build  meson_options.txt
.github/workflows/: ci.yml  codecov.yml
ci/: debianize-steps.yml
daemon/: meson.build
daemon/consumerd/: gaeguli-consumer.c  gaeguli_consumer.conf.in  meson.build
daemon/consumerd/test/: gaeguli-consumer-client.c  meson.build
daemon/consumerd/user/: gaeguli-consumer.service.in  meson.build
daemon/providerd/: gaeguli-provider.c  gaeguli_provider.conf.in  meson.build
daemon/providerd/test/: gaeguli-provider-client.c  meson.build
daemon/providerd/user/: gaeguli-provider.service.in  meson.build
debian/: changelog  control  copyright  gaeguli-adaptor-demo.install  gaeguli-adaptor-demo.postinst  gaeguli-dev.install  gaeguli-tools.install  gaeguli.install  libgaeguli-dev.install  libgaeguli-test-common-dev.install  libgaeguli-test-common2.install  libgaeguli1.install  libgaeguli2.install  rules
doc/: StreamAdaptor.dia  meson.build
doc/reference/: gaeguli-docs.xml  meson.build
docker/: Dockerfile.16.04  Dockerfile.18.04  Dockerfile.19.04  build-gaeguli.sh
gaeguli/: edge.c  edge.h  enumtypes.c.template  enumtypes.h.template  fifo-transmit.c  fifo-transmit.h  gaeguli-internal.h  gaeguli.h  meson.build  messenger.c  messenger.h  pipeline.c  pipeline.h  streamadaptor.c  streamadaptor.h  target.c  target.h  types.c  types.h
gaeguli/adaptors/: bandwidthadaptor.c  bandwidthadaptor.h  nulladaptor.c  nulladaptor.h
gaeguli/utils/: gaeguli_utils.c  gaeguli_utils.h
gaeguli/workers/: gaeguli-pipeline-worker.c  gaeguli-target-worker.c  meson.build
hooks/: pre-commit.hook
tests/: meson.build  test-adaptor.c  test-edge.c  test-fifo-transmit.c  test-pipeline.c  test-rtp-over-srt.c  test-target.c
tests/adaptor-demo/: adaptor-demo.c  adaptor-demo.h  http-server.c  http-server.h  main.c  meson.build  tc-helper.c  tc_helper_post_install.sh  traffic-control.c  traffic-control.h
tests/adaptor-demo/resources/: adaptor-demo.gresources.xml  adaptor-demo.js  index.html  meson.build  style.css
tests/common/: meson.build  receiver.c  receiver.h
tests/common/gaeguli/test/: meson.build  receiver.c  receiver.h
tools/: fifo-transmit.c  meson.build  pipeline.c
